<resources>
    <string name="app_name">NBA</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet</string>
    <string name="players">Players</string>
    <string name="about">About</string>
    <string name="configure">Configure</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure to delete</string>
    <string name="love_this_player">Love this player</string>
    <string name="firstName">Firstname</string>
    <string name="last_name">Last name</string>
    <string name="position">Position</string>
    <string name="google">Google maps</string>
    <string name="exit">Exit</string>
    <string name="really">Really?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>