<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/padding_players"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <ImageView
            android:id="@+id/ivPlayer"
            android:src="@drawable/kobe"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/PagerPlayer"
                android:layout_weight="5"/>

            <ImageView
                android:id="@+id/ivBest"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/best_black"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvFirstName"
            android:text="Kobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/last_name"
            android:theme="@style/PagerPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvLastName"
            android:text="Brynet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/position"
            android:theme="@style/PagerPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvPosition"
            android:text="C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>






</ScrollView>